--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -4,11 +4,11 @@
     background-color:  #f4f1ec;
     resize: none;
     outline: none;
-  
-    width: 91%;
+    width: 100%;
     height: 250px;
-    margin-left: 82px;
+    margin-left: 6px;
   margin-right: 5px;
+  margin-top: 5px;
  
  
    }
@@ -56,5 +56,5 @@
    section.head:hover  {
    box-shadow: 10px 10px;
    color: rgb(165, 156, 144);
-   display: none;
+   
 }
