--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -7,11 +7,9 @@
     width: 100%;
     height: 250px;
     margin-left: 6px;
-  margin-right: 5px;
-  margin-top: 5px;
- 
- 
-   }
+    margin-right: 5px;
+    margin-top: 5px;
+}
    .texttweet {
     width: 95%;
     margin-left: 45px;
@@ -53,8 +51,14 @@
    img {
        text-align: left;
    }
-   section.head:hover  {
+
+section.head:hover {
    box-shadow: 10px 10px;
    color: rgb(165, 156, 144);
    
 }
+section.head:hover .tweet-name-right {
+    display: none;
+ }
+
+/* , .tweet-name-right:hover */
