--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -1,5 +1,5 @@
 #tweetcontainer {
-    display: inline-block;
+    /* display: inline-block;
     border: 2px solid black;
     background-color:  #f4f1ec;
     resize: none;
@@ -8,57 +8,71 @@
     height: 250px;
     margin-left: 6px;
     margin-right: 5px;
-    margin-top: 5px;
+    margin-top: 5px; */
 }
-   .texttweet {
-    width: 95%;
-    margin-left: 45px;
+.tweet {
+    border: 2px solid black;
+    /* width: 100%;
+    height: 250px; */
+    margin-left: 6px;
     margin-right: 5px;
+    margin-top: 25px;
+    padding: 18px;
+}
+
+   .texttweet {
+    /* width: 95%;
+    margin-left: 45px;
+    margin-right: 5px; */
     border-bottom: 5px solid black;
    }
    .article-header {
-    display: inline-block;
-    width: 90%; 
+   
+    display: flex;
+    align-items: center;
+    /* width: 90%;  */
    }
    .article-footer {
-    margin: 0 18px;
+    /* margin: 0 18px; */
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
     color: rgb(26, 26, 97);
    }
    .tweet-name {
-    display: inline-block;
+    /* display: inline-block;
     margin-top: 5px;
-    justify-content: space-between;
+    justify-content: space-between; */
     color: rgb(51, 49, 49);
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
     
    }
    .tweet-name-right {
-    display: block;
-    float: right;
+    margin-left: auto;
     background-color: transparent;
     color: rgba(167, 175, 175, 0.938);
-    visibility: visible;
+    visibility: hidden;
    }
    .tweetTime {
     display: inline-block;
     margin: 0;
    }
    .tweet-icons{
-    display: block;
-    float: right;
+    /* display: block; */
+    /* float: right; */
     color: rgb(66, 51, 139);
    }
    img {
        text-align: left;
    }
 
-section.head:hover {
+.tweet:hover {
    box-shadow: 10px 10px;
    color: rgb(165, 156, 144);
    
 }
-section.head:hover .tweet-name-right {
-    display: none;
+.tweet:hover .tweet-name-right {
+    visibility: visible;
  }
 
 /* , .tweet-name-right:hover */
