--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,24 +1,42 @@
 .header {
-    height: 400px;
-    width: 100%;
-    padding: 5px;
-    text-align: center;
-    position: absolute;
-    background-image: url('/images/background-img.png');
-    display: block;
-    margin-left: auto;
-    margin-right: auto; 
+  height: 400px;
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+  position: absolute;
+  background-image: url("/images/background-img.png");
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-
 
 .name-light {
-    font-weight: 400;
+  font-weight: 400;
 }
 .arrow {
-display: block;
-text-align: center;
-color: red;
-
+  display: block;
+  text-align: center;
+  color: red;
+  cursor: pointer;
+  
+}
+.bounce {
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
 }
 
 
