--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -75,4 +75,35 @@
     visibility: visible;
  }
 
-/* , .tweet-name-right:hover */
+ .alert {
+    background-color: none;
+    color: red;
+    transition: opacity 0.6s;
+    text-align: center;
+    border-style: solid;
+    border-color: red;
+    display: none;
+  }
+  .alerte {
+    background-color: none;
+    color: red;
+    transition: opacity 0.6s;
+    text-align: center;
+    border-style: solid;
+    border-color: red;
+    display: none;
+  }
+  .closebtn {
+    margin-left: 15px;
+    color: rgb(5, 4, 4);
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
