--- a/public/styles/tweet-element.css
+++ b/public/styles/tweet-element.css
@@ -1,95 +1,76 @@
-#tweetcontainer {
-    /* display: inline-block;
-    border: 2px solid black;
-    background-color:  #f4f1ec;
-    resize: none;
-    outline: none;
-    width: 100%;
-    height: 250px;
-    margin-left: 6px;
-    margin-right: 5px;
-    margin-top: 5px; */
-}
+/* --New--Tweet-Styling--*/
 .tweet {
-    border: 2px solid black;
-    /* width: 100%;
-    height: 250px; */
-    margin-left: 6px;
-    margin-right: 5px;
-    margin-top: 25px;
-    padding: 18px;
+  border: 2px solid black;
+  margin-left: 6px;
+  margin-right: 5px;
+  margin-top: 25px;
+  padding: 18px;
 }
-
-   .texttweet {
-    /* width: 95%;
-    margin-left: 45px;
-    margin-right: 5px; */
-    border-bottom: 5px solid black;
-   }
-   .article-header {
-   
-    display: flex;
-    align-items: center;
-    /* width: 90%;  */
-   }
-   .article-footer {
-    /* margin: 0 18px; */
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    color: rgb(26, 26, 97);
-   }
-   .tweet-name {
-    /* display: inline-block;
-    margin-top: 5px;
-    justify-content: space-between; */
-    color: rgb(51, 49, 49);
-    /* padding-bottom: 10px; */
-    
-   }
-   .tweet-name-right {
-    margin-left: auto;
-    background-color: transparent;
-    color: rgba(167, 175, 175, 0.938);
-    visibility: hidden;
-   }
-   .tweetTime {
-    display: inline-block;
-    margin: 0;
-   }
-   .tweet-icons{
-    /* display: block; */
-    /* float: right; */
-    color: rgb(66, 51, 139);
-   }
-   img {
-       text-align: left;
-   }
-
+.texttweet {
+  border-bottom: 5px solid black;
+}
+.article-header {
+  display: flex;
+  align-items: center;
+}
+.article-footer {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(26, 26, 97);
+}
+.tweet-name {
+  color: rgb(51, 49, 49);
+}
+.tweet-name-right {
+  margin-left: auto;
+  background-color: transparent;
+  color: rgba(167, 175, 175, 0.938);
+  visibility: hidden;
+}
+.tweetTime {
+  display: inline-block;
+  margin: 0;
+}
+.tweet-icons {
+  color: rgb(66, 51, 139);
+}
+img {
+  text-align: left;
+}
 .tweet:hover {
-   box-shadow: 10px 10px;
-   color: rgb(165, 156, 144);
-   
+  box-shadow: 10px 10px;
+  color: rgb(165, 156, 144);
 }
 .tweet:hover .tweet-name-right {
-    visibility: visible;
- }
-
- .alert {
-    background-color: none;
-    color: red;
-    transition: opacity 0.6s;
-    text-align: center;
-    border-style: solid;
-    border-color: red;
-    display: none;
+  visibility: visible;
+}
+.alert {
+  background-color: none;
+  color: red;
+  transition: opacity 0.6s;
+  text-align: center;
+  border-style: solid;
+  border-color: red;
+  display: none;
+}
+.alerte {
+  background-color: none;
+  color: red;
+  transition: opacity 0.6s;
+  text-align: center;
+  border-style: solid;
+  border-color: red;
+  display: none;
+}
+.closebtn {
+    margin-left: 15px;
+    color: rgb(5, 4, 4);
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
   }
-  .alerte {
-    background-color: none;
-    color: red;
-    transition: opacity 0.6s;
-    text-align: center;
-    border-style: solid;
-    border-color: red;
-    display: none;
-  }
+  
