--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,13 +4,10 @@
   width: 100%;
   padding: 5px;
   text-align: center;
-  position: absolute;
   background-image: url("/images/background-img.png");
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 .name-light {
+  margin-top: 20px;
   font-weight: 400;
 }
 .arrow {
