--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,17 +1,17 @@
-
+/*nav tweet css*/
 .navbar {
-padding: 30px;
-height: 120px;
-width: 100%;
-top: 0;
-z-index: 100;
-background-color: #4056A1;
-color: #ffffff;
-padding: 1.50em;
+  padding: 30px;
+  height: 120px;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+  background-image: url("/images/background-img.png");
+  color: #ffffff;
+  padding: 1.5em;
 }
 .navbar-logo {
-    font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
 }
-.newTweet { 
-    float: right;
-} 
+.newTweet {
+  float: right;
+}
