--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -2,27 +2,23 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-
-/*
- * Global layout stuff
- */
-
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 main {
   width: 80%;
-  /* margin-top: 450px; */
   margin-left: auto;
   margin-right: auto;
   text-align: justify;
   text-justify: inter-word;
-  background-color: #f4f1ec; 
+  background-color: #f4f1ec;
   padding-left: 50px;
 }
