--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,27 +1,27 @@
 /*new tweet css*/
-.button {background-color: #4056A1;
-    font-family: 'Bungee', cursive;
-    color: #ffffff;
- margin-top: 8px;;
+.button {
+  background-color: #4056a1;
+  font-family: "Bungee", cursive;
+  color: #ffffff;
+  margin-top: 8px;
 }
 .counter {
-float: right;
-font-family: 'Bungee', cursive;
-
+  float: right;
+  font-family: "Bungee", cursive;
 }
 .text {
-    width: 100%;
-    background-color: transparent;
-    border: none;
-    border-bottom: solid black 4px;
-    margin-bottom: 5px;
-    font-weight: bold;
-    resize: none;
-    height: 50px;
-    outline-width: 0;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-bottom: solid black 4px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  resize: none;
+  height: 50px;
+  outline-width: 0;
 }
 .red {
-color: red;
-float: right;
-font-family: 'Bungee', cursive;
+  color: red;
+  float: right;
+  font-family: "Bungee", cursive;
 }
